pushing updated education cost table

--- a/AppOutput/Education/educosts_app.tex
+++ b/AppOutput/Education/educosts_app.tex
@@ -1,18 +1,22 @@
 \begin{tabular}{C{3.5cm} C{1.5cm} C{1.5cm} C{2cm} C{6.5cm}}
 \toprule
 Schooling level & Ages & Duration (Years) & Yearly Cost &Attainment \& Notes\\ \midrule
-K-11 & 6-16 & 10 &   \$9,113  & All subjects. Only 1 control individual dropped out before completing 9th grade; we assume completion up to 8th grade. \\
-Grade 12 & 17-18 & 2 &  \$9,113  & Counted only for subjects who completed high school, 29:38 (control:treatment).\\ \\
-GED (Started) & 19 & .5 &  \$155& GED is considered a one year program. No subjects identified as having starting a GED program without finishing.\\ \\
-GED (Completed) & 19 & 1 & \$155 & 8:6 (control:treatment).\\ \\
-Vocational or Technical Training (Started)& 19 & 1 & \$7,245 & 8:3  (control:treatment).\\ \\
-Vocational or Technical Training (Completed)& 19-20 & 2 &  \$7,245 &  4:9 (control:treatment)\\ \\
-Community College (Started) &   19 & 1 &  \$7,001 & 11:6 (control:treatment) \\ \\
-Community College (Completed) & 19-20 & 2 &  \$7,001 & 9:8 (control:treatment)\\ \\
- Any College (Started)   &  19 & 1 &  \$7,685& Assume dropouts drop out at the end of the first year. 5:8 (control:treatment).\\ \\
- Any College (Completed) &  19-22 & 4 & \$11,886 & 3:8 (control:treatment)\\ \\
-Graduate School (Started) & 23 & 1 &  \$9,704& Assume dropouts drop out at the end of the first year. 2 treated individuals.\\ \\
- Finished Masters &  23-25 & 2 &  \$9,704& 1 treated individual\\ \\
+
+K-8 & 6-14 & 8 & \$9,113  & All subjects. Assume dropout before Grade 9 completed up to Grade 8. \\
+\\
+
+High School (Not Completed) & 15-16 & 2 &   \$9,113  &  This is from Grade 9 to Grade 10. Assume high school dropout completed up to Grade 10.  \\ \\
+
+High School (Completed) & 15-18 & 4 &   \$9,113  &  This is from Grade 9 to Grade 12. 47:38 (control:treatment) \\ \\
+
+GED (Not Completed) & 18 & .5 &  \$155& GED is considered a one year program. No subjects identified as having starting a GED program without finishing.\\ \\
+GED (Completed) & 18 & 1 & \$155 & 1:1 (control:treatment).\\ \\
+Community College/Technical Training (Not Completed) &   19 & 1 &  \$7,001 & Assume dropouts drop at the end of the first year. 19:7 (control:treatment) \\ \\
+Community College/Technical Training (Completed) & 19-20 & 2 &  \$7,001 & 18:19 (control:treatment)\\ \\
+ Any College (Not Completed)   &  19-20 & 1 &  \$11,886 & Assume dropouts drop out at the end of the second year. 7:11 (control:treatment).\\ \\
+ Any College (Completed) &  19-22 & 4 & \$11,886 & 6:14 (control:treatment) \\ 
+Graduate School (Not Completed) & 23 & 1 &  \$9,704& Assume dropouts drop out at the end of the first year. 3 treated individuals.\\ \\
+ Finished Masters &  23-24 & 2 &  \$9,704 & 1 treated individual\\ \\
  Finished PhD & 23-26 & 4 & \$9,704 & 1 treated individual\\ \\
  \midrule
  Grade Retention& NA & 1 &\$9,113 & \\ \\
