implement comments by sidarth

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -320,51 +320,47 @@ For individual $i$, find counterparts $j(i)$ such that
 
 \noindent where $\epsilon$ is arbitrarily small. $j(i) \in F_0$, for $t \leq t^{\ast}$, where $F_0$ is the index set in the auxiliary sample and $\bm{\Sigma}^d$ is the covariance matrix of the $\bm{X}$ in the experimental sample group $d$. We construct synthetic cohort samples using the same auxiliary samples and weight using the inverse value of~\eqref{eq:ingrownnail}. We fit dynamic relationships in the synthetic cohort sample over the whole sample period. Using the dynamic relationships in the synthetic cohort sample and the initial conditions from the experimental sample, we predict future outcomes. For this approach to be effective, we require that the support of the auxiliary sample includes the support of the experimental sample, an assumption formalized in the next subsection.\footnote{Evidence on this assumption is in Appendix~\ref{appendix:methodology}. In practice, we use indicators for black and male, year of birth, and years of education and labor income at age 30 as matching variables. We explain how we pick these variables and provide a sensitivity analysis to this choice in Appendix~\ref{appendix:methodology}.}
 
-When samples are restricted to satisfy $\bm{B} \in \mathcal{B}_0$, given the small scale of the ABC/CARE program and the asynchrony of the experimental and synthetic cohort samples, it is reasonable to assume (in the absence of cohort effects) the synthetic cohort is equivalent to the control group $(D=0)$. This means that a test of the validity of our matching procedure is to compare the dynamic relationships fit on the synthetic cohort (with $\bm{B} \in \mathcal{B}_0$) constructed using the matching metric~\eqref{eq:ingrownnail} with the dynamic relationships for both treatments and controls within sample. 
+\noindent Our matching is based on indicators for black and male indicators, year of birth, years of education and labor income at age 30. We include labor income at age 21 and body-mass index at age 34 in the samples in which it is available to assess the quality of the matching out the variables targeted by the matching procedure.\footnote{We omit black because the experimental sample is $99\%$ black and year of birth because, by construction, this variable does not help to assess the matching. The auxiliary samples include younger individuals. We include it as part of the match to obtain year of birth matches that are as close as possible to the experimental group.}
 
-A second test compares the post--$t^*$ outcomes for the auxiliary sample alone (with $\bm{B} \in \mathcal{B}_0$) and the constructed synthetic cohort. Figure~\ref{fig:labor-income-profiles} displays a comparison of these profiles. For females, Figure~\ref{fig:labor-income-profilesa} displays the dynamics relationship for the control group. Figure~\ref{fig:labor-income-profilesb} displays the post--$t^*$ dynamics for the auxiliary sample alone (with $\bm{B} \in \mathcal{B}_0$) and the constructed experimental sample. Figures~\ref{fig:labor-income-profilesc} and Figure~\ref{fig:labor-income-profilesd} display an analogous exercise for males.
+\noindent When these methods are applied to the auxiliary data discussed in Section~\ref{section:cbaresults} they are effective. Figure~\ref{fig:control-sub} shows the prediction of labor income by comparing the prediction in the ABC/CARE data with the life-cycle profile of disadvantaged individuals in the PSID. Our pattern of life-cycle labor income is typical for low-skilled workers. See, e.g., \cite{Blundell-etal_2015_J-Pub-E}.\footnote{Our prediction is based on indicator variables of being male and being black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, body-mass index at 34, labor income at ages 21 and 30, and one-period lagged labor income. A justification for the use of these variables, evidence on their predictive power, a sensitivity analysis to using different prediction variables are in Appendix~\ref{appendix:methodology}.}
 
-It is also useful to compare pre--$t^*$ observed characteristics for (i) individuals with $\bm{B} \in \mathcal{B}_0$; (ii) the synthetic cohorts constructed based on \eqref{eq:ingrownnail}; and (iii) control-group individuals. Comparing (i) and (ii) allows us to asses if samples restricted to $\bm{B} \in \mathcal{B}_0$ are a comparable synthetic cohort in the absence of treatment; comparing (ii) and (iii) allows us to assess the quality of the matching procedure. Table~\ref{table:comp} presents this exercise. 
-
-Testing whether the synthetic cohort constructed for the treatment group is a valid comparison is more complex than the above tests. There is not direct argument as when we compare the synthetic control-group cohort to the cohort such that $\bm{B} \in \mathcal{B}_0$. The reason is that treatment experimentally shifts human capital at early stages. When matching the individuals in the non-experimental sample to the treatment-group individuals, we could very well be obtaining matches to individuals with relatively higher unobserved ability (generating a standard omitted-variable bias). We develop this further in Section~\ref{section:just}. One comparison we can make, however, is between the synthetic treatment group we produce and the treatment group pre--$t^*$. Table~\ref{table:comp} evidences similarities. 
-
-Our matching is based on indicators for black and male indicators, year of birth, years of education and labor income at age 30. We include labor income at age 21 and body-mass index at age 34 in the samples in which it is available to assess the quality of the matching out the variables targeted by the matching procedure.\footnote{We omit black because the experimental sample is $99\%$ black and year of birth because, by construction, this variable does not help to assess the matching. The auxiliary samples include younger individuals. We include it as part of the match to obtain year of birth matches that are as close as possible to the experimental group.}
-
-\newgeometry{top=.6in, bottom=.8in, left=.8in, right=.8in}
-\begin{sidewaystable}[!htbp] 
-\begin{threeparttable}
-\caption{Matching ABC/CARE to Non-Experimental Samples}
-\label{table:comp}
+\begin{sidewaysfigure}[!htbp]
 \centering
-\footnotesize 
-\input{output/allsamplesmatch_ready.tex}
-\begin{tablenotes}
-\footnotesize
-\item Note: Each column displays the mean and standard deviation in parentheses of the variables labeled in the first row. Age in which the variables is measured is in parentheses. We use the matching procedure in this section to obtain the control and treatment synthetic cohorts. For this exercise, $\bm{B} \in \mathcal{B}_0$ is defined as being black with maternal education of 12 years or less. Cells missing indicate that variables are not available in the non-experimental. We also omit $\bm{B} \in \mathcal{B}_0$ in the treatment columns. Standard deviations are based on the empirical bootstrap distribution.
-\end{tablenotes}
-\end{threeparttable}
-\end{sidewaystable}
-\restoregeometry
-\doublespacing
+\caption{Labor Income Profile Predictions}\label{fig:labor-income-profiles}
+\begin{subfigure}[h]{0.5\textwidth}
+		\centering
+		\caption{Prediction for ABC/CARE Females} \label{fig:labor-income-profilesa}
+		\includegraphics[width=\textwidth]{output/labor_25-65_pset1_mset3_female.eps}
+\end{subfigure}%
+\begin{subfigure}[h]{0.5\textwidth}
+		\centering
+		\caption{Prediction for ABC/CARE Males} \label{fig:labor-income-profilesc}
+		\includegraphics[width=\textwidth]{output/labor_25-65_pset1_mset3_male.eps}
+\end{subfigure}
+\footnotesize \justify
+Note: Panels (a) displays the predicted labor income life-cycle profiles for ABC/CARE for females by treatment status, based on the method proposed in this section. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We highlight the \textit{realized or observed} labor income at $t^*$ (age 30) for the ABC/CARE control- and treatment-group participants. Panel (b) displays the analogous exercise for males. Standard errors are based on the empirical bootstrap distribution.
+\end{sidewaysfigure}
 
-As seen in Table~\ref{table:comp}, the average predicted labor income is very similar to the average observed labor income in both treatment and control groups. In addition to this correspondence in the levels, there is correspondence in the differences. Comparing the predicted and observed income between the treatment and control groups reinforces the true strength of the prediction: both differences are close to $\$12,000$.
+\indent In the experimental sample, the parents of children with observed characteristics $\bm{B} \in \mathcal{B}_0$ generally accept to participate of the program. Given that in the non-experimental sample there is no treatment, a test of validity of our matching procedure is to compare the dynamic relationship in the non-experimental individuals such that  $\bm{B} \in \mathcal{B}_0$ to the synthetic control group we construct (i.e., the group in the non-experimental sample that we match on observed characteristics to the control group in the experimental sample). We can also compare labor income at $t^*$ of these two groups to the observed labor income in the experimental sample (we observe labor income at $t^*$). Figure~\ref{figure:controltests} displays these comparison. We plot the labor income of individuals in our non-experimental sample such that $\bm{B} \in \mathcal{B}_0$ and the synthetic control group from ages 20 to 45. We also highlight the labor income of the experimental control group at $t^*$ (age 30). We stop at age 45 because we do not observe individual characteristics in the non-experimental sample to construct the ABC/CARE high-risk index defining $\bm{B} \in \mathcal{B}_0$. 
 
-When these methods are applied to the auxiliary data discussed in Section~\ref{section:cbaresults} they are effective. Figure~\ref{fig:control-sub} shows the prediction of labor income by comparing the prediction in the ABC/CARE data with the life-cycle profile of disadvantaged individuals in the PSID. Our pattern of life-cycle labor income is typical for low-skilled workers. See, e.g., \cite{Blundell-etal_2015_J-Pub-E}.\footnote{Our prediction is based on indicator variables of being male and being black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, body-mass index at 34, labor income at ages 21 and 30, and one-period lagged labor income. A justification for the use of these variables, evidence on their predictive power, a sensitivity analysis to using different prediction variables are in Appendix~\ref{appendix:methodology}.}
+Another test we can implement at $t^*$ is to compare the predicted labor income based on the synthetic control and treatment groups with the realized labor income for the ABC/CARE control- and treatment-group participants. Figure~\ref{fig:labor-income-profiles} displays the prediction of labor income over the life cycle for the treatment and control groups, and highlights realized or observed labor income at  $t^*$. In neither of the tests can we reject differences that question the validity of our method to construct synthetic treatment and control groups.
 
-A benchmark comparison for the labor income predictions we produce is to follow \citet{Mincer_1974_schooling}. We take our estimates of income at age 30 and calculate a perpetuity with a 3\% interest rate to correspond with our predicted NPV. This is because the Mincer-type estimates do not account for any income increase beyond age 30. Table~\ref{tab:mincerpred} presents the results from this exercise.
-
-\begin{table}[htbp]
+\begin{sidewaysfigure}[!htbp]
 \centering
-\begin{threeparttable}
-\caption{Mincer-type Predictions, Age 30}\label{tab:mincerpred}
-\small
-\input{output/mincerpred_ready.tex}
-\begin{tablenotes}
-\footnotesize
-\item Note: This table presents Mincer-type predictions \citep{Mincer_1974_schooling}. Prediction at 30: predicted labor income at age 30 based on the procedure in Section~\ref{sec:necrosis}. Perpetuity based on 30: Prediction at 30/.03. Predicted Life-cycle: life-cycle predicted net present value of income based on the procedure in Section~\ref{sec:necrosis}. All values are in 1,000s (2014 USD). Standard errors are in parentheses and are based on the empirical bootstrap distribution.
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
+\caption{Labor Income Profile, Synthetic Cohoers and Disadvantaged Individuals in the Non-experimental Samples}\label{figure:controltests}
+\begin{subfigure}[h]{0.5\textwidth}
+		\centering
+		\caption{Females} 
+		\includegraphics[width=\textwidth]{output/abccare_disad_0.eps}
+\end{subfigure}%
+\begin{subfigure}[h]{0.5\textwidth}
+		\centering
+		\caption{Males} 
+		\includegraphics[width=\textwidth]{output/abccare_disad_1.eps}
+\end{subfigure}
+\footnotesize \justify
+Note: Panels (a) displays the predicted labor income for females in the non-experimental samples such that $\bm{B} \in \mathcal{B}_0$, i.e. ABC/CARE eligible, and for the synthetic control group we construct based on the method proposed in this section. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We highlight the \textit{realized or observed} labor income at $t^*$ (age 30) for the ABC/CARE control- and treatment-group participants. We stop at age 45 for want of data to compute the high-risk index defining $\bm{B} \in \mathcal{B}_0$ in ABC/CARE. Panel (b) displays the analogous exercise for males. Standard errors are based on the empirical bootstrap distribution.
+\end{sidewaysfigure}
 
 \subsection{Justifying the Matching Procedure} \label{section:just}
 
@@ -441,35 +437,7 @@ Putting Assumptions~\ref{ass:butts}--\ref{ass:corns} together, we obtain full ob
 
 Our prediction is based on matching individuals in the non-experimental samples to the control-group individuals. In the non-experimental samples, however, the dependence between $\mathbf{X}_{t}$ and $\varepsilon_{t}$ is generally different from that dependence in the experimental sample. While the experiment randomly shifts inputs of the production function of the forecasted outcome, in the non-experimental individuals with relatively high educated individuals could come from a better background, be more motivated, etc. This would bias our prediction because it would align it with a trend that does not correspond to the unobserved characteristics of the experimental sample. 
 
-One solution for this problem is to obtain a measure of the potentially problematic unobserved component in the non-experimental sample and condition on it when estimating \eqref{eq:trenchfoot}, which we use to predict out of sample (in the experimental data). Three or more measures in the non-experimental sample would allow us to identify the distribution of this unobserved components and condition on them \citet{Cunha_Heckman_ea_2005_oep,Cunha_Heckman_etal_2010_est_tech_cognoncog}. If the endogeneity issue evolves dynamically, we would need these measures in every period. \textbf{[JLG: I'm exploring this. But I'm afraid we are asking too much from the non-experimental samples. We are already using various measures of PIAT for the match.]}
-
-
-\begin{sidewaysfigure}[!htbp]
-\centering
-\caption{Labor Income Profile, Predictions and Comparison to PSID}\label{fig:labor-income-profiles}
-\begin{subfigure}[h]{0.4\textwidth}
-		\centering
-		\caption{Prediction for ABC/CARE Females} \label{fig:labor-income-profilesa}
-		\includegraphics[width=\textwidth]{output/labor_25-65_pset1_mset3_female.eps}
-\end{subfigure}%
-\begin{subfigure}[h]{0.4\textwidth}
-	\centering
-	\caption{PSID, Disadvantaged Females} \label{fig:labor-income-profilesb}
-		\includegraphics[width=\textwidth]{output/psid_B0_match_s0}
-\end{subfigure}
-\begin{subfigure}[h]{0.4\textwidth}
-		\centering
-		\caption{Prediction for ABC/CARE Males} \label{fig:labor-income-profilesc}
-		\includegraphics[width=\textwidth]{output/labor_25-65_pset1_mset3_male.eps}
-\end{subfigure}%
-\begin{subfigure}[h]{0.4\textwidth}
-	\centering
-	\caption{PSID, Disadvantaged Males} \label{fig:labor-income-profilesd}
-		\includegraphics[width=\textwidth]{output/psid_B0_match_s1.eps}
-\end{subfigure}
-\footnotesize \justify
-Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CARE females and males by treatment status, based on predictions that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) display the predicted labor income profiles of disadvantaged females ($\bm{B} \in \mathcal{B}_0$) in the PSID and control group matches in the PSID. The matches are constructed according to the procedure in Section~\ref{sec:necrosis}. For this exercise, we define disadvantaged females ($\bm{B} \in \mathcal{B}_0$) as black females whose mothers have 12 years of education or less. Panel (d) displays an analogous exercise for males. Standard errors are based on the empirical bootstrap distribution.\\
-\end{sidewaysfigure}
+One solution for this problem is to obtain a measure of the potentially problematic unobserved component in the non-experimental sample and condition on it when estimating \eqref{eq:trenchfoot}, which we use to predict out of sample (in the experimental data). Three or more measures in the non-experimental sample would allow us to identify the distribution of this unobserved components and condition on them \citet{Cunha_Heckman_ea_2005_oep,Cunha_Heckman_etal_2010_est_tech_cognoncog}. If the endogeneity issue evolves dynamically, we would need these measures in every period. While developing a test of Assumption~\ref{ass:eczema}, we explain these method in detail in Appendix~\ref{app:invariance}.
 
 \subsection{Health} \label{section:health}
 
@@ -495,13 +463,13 @@ At each age, once we obtain the transition probability for each health outcome, 
 
 The same procedure is applied to calculate quality-adjusted life years (QALYs).\footnote{A quality-adjusted life year (QALY) reweighs a year of life according to its quality given the burden of disease. Suppose we assign a value of $\$150,000$ (2014 USD) to each years of life. A QALY of $\$150,000$ denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than $\$150,000$ when there is positive burden of disease, as worse health conditions imply lower QALYs. When an individual dies, her QALY equals zero. It is worth noting that there are extreme combinations of disease and disability that may generate negative QALYs, although this case is unusual.} We compute a QALY model based on the EQ-5D instrument, a widely-used Health-related Quality-of-life (HRQoL) measure, available in MEPS. We then estimate this model from the PSID.
 
-We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) out-of-pocket spending (medical spending paid directly by the individual); and (ii) all public spending other than Medicare. Each medical spending model includes a individuals the variables we use to predict labor and transfer income, current health, risk factors, and functional status as explanatory variables. The MCBS-based medical spending models also include lagged health because of the length of time for which MCBS subjects are observed.
+We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) out-of-pocket spending (medical spending paid directly by the individual); and (ii) all public spending other than Medicare. Each medical spending model includes the variables we use to predict labor and transfer income, together with current health, risk factors, and functional status as explanatory variables.
 
-We also calculate medical expenditure before age 30. We combine the MEPS and retrospective information in the ABC/CARE interviews at ages 21 and 30 related to hospitalizations at ages 12 and 15 and births at age 15. In addition to this retrospective information, we use use individual and family demographics to predict medical expenditure models for each age.
+We also calculate medical expenditure before age 30. We combine the MEPS and retrospective information in the ABC/CARE interviews at ages 21 and 30 related to hospitalizations at ages 12 and 15 and, and information of births given at age 15. In addition to this retrospective information, we use individual and family demographics to predict medical expenditure models for each age.
 
 The first level of each model predicts the likelihood that the subject incurred any medical expenditure in the period. The second level predicts the medical expenditure for those with positive expenditures.
 
-QALYs are crucial to our estimations because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} shows our estimation of QALYs together with a PSID comparison, in an analogous exercise to Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for individuals in the control group match the QALYs of low-skilled individuals in the PSID.
+QALYs are crucial to our estimations because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} shows our estimation of QALYs together with a PSID comparison, in an analogous exercise to Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for individuals in the control group match the QALYs of disadvantaged individuals in the PSID.
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -564,11 +532,11 @@ Note: This table details the non-experimental data sources we use to interpolate
 \end{threeparttable}
 \end{table}
 
-Figure~\ref{figure:npvs} presents the net present values for the main components of the cost/benefit analysis pooling males and females. The ``Baseline'' bars represent the estimates based on the first parameter of interest, comparing the treatment- to the control-group subjects. The ``Stay at Home'' bars represent the comparison between the treatment-group and the control-group subjects who stayed at home. The ``Alternative Preschool'' bars represent the comparison between the treatment-group and the control-group subjects who attended alternative preschools.
+Figure~\ref{figure:npvs} presents the net present values for the main components of the cost/benefit analysis pooling males and females. The ``Treatment vs. Next Best'' bars represent the estimates based on the first parameter of interest, comparing the treatment- to the control-group subjects. The ``Treatment vs.  Stay at Home'' bars represent the comparison between the treatment-group and the control-group subjects who stayed at home. The ``Treatment vs. Alternative Preschool'' bars represent the comparison between the treatment-group and the control-group subjects who attended alternative preschools.
 
-The first category, ``Costs," represents the cost of the programs' implementation. The second category, ``Total Net Benefits" quantifies the benefits for the treatment-group subjects net of the benefits of the control-group subjects. We consider labor income of both the participants and of their parents, ``Labor Income" and ``Parental Income." The program produces a positive net present value on labor income of the treated subjects. This considers income from age 21 all the way to retirement. 
+The first category, ``Program Costs," represents the cost of the programs' implementation. The second category, ``Total Net Benefits" quantifies the benefits for the treatment-group subjects net of the benefits of the control-group subjects. We consider labor income of both the participants and of their parents, ``Labor Income" and ``Parental Income." The program produces a positive net present value on labor income of the treated subjects. This considers income from age 21 all the way to retirement. 
 
-We also account for the fact that the parents of the treatment-group subjects increased their labor supply and therefore their income. Ideally, we would like to consider the full life-cycle of parental income to allow for the possibility of wage growth induced by the education and work-experience accumulated while the childcare component of ABC/CARE. Especially because Table~\ref{table:tescombined} shows sizable and significant effects on parental income up to when the children are age 21. In practice, it is not feasible to find an auxiliary dataset allowing us to predict the income of parents with the observed characteristics of the children who attended ABC/CARE. The information we observe from the parents is too limited to produce a sensible prediction without using their children's characteristics. We take a more conservative approach and linearly interpolate parental labor income from chidren's cages 0 to 21, noting that we observe parental income at ages 1.5, 3.5, 4.5, 8, 12, 15, and 21.\footnote{Treatment effects for parental income at each of these ages are in Appendix~\ref{appendix:results}.}
+We also account for the fact that the parents of the treatment-group subjects increased their labor supply and therefore their income. Ideally, we would like to consider the full life-cycle of parental income to allow for the possibility of wage growth induced by the education and work-experience accumulated while the childcare component of ABC/CARE. Especially because Table~\ref{table:tescombined} shows sizable and significant effects on parental income up to when the children are age 21. In practice, it is not feasible to find an auxiliary dataset allowing us to predict the income of parents with the observed characteristics of the children who attended ABC/CARE. The information we observe from the parents is too limited to produce a sensible prediction without using their children's characteristics. We take a more conservative approach and linearly interpolate parental labor income from chidren's ages 0 to 21, noting that we observe parental income at ages 1.5, 3.5, 4.5, 8, 12, 15, and 21.\footnote{Treatment effects for parental income at each of these ages are in Appendix~\ref{appendix:results}.}
 
 Crime is an important component, which is consistent with previous analysis of early childhood education programs.\footnote{\citet{Heckman_Moon_etal_2010_RateofReturn}.} We then present two main categories for health, ``QALYs" and ``Medical Costs." As documented in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}, ABC/CARE had substantial effects on several measures of long-term health, especially for males---e.g. body-mass index, systolic and diastolic pressure, Framigham risk index. This translates into a higher probability of survival at later ages. Thus, individuals in the treatment group incur higher medical costs. However, their health conditions enable them to have higher quality lives, which is reflected in the net gain the program generates in the QALYs. Finally, we present the net present value of education costs. It is negative because subjects in the treatment group acquired more education throughout their life cycles.
 
@@ -678,11 +646,11 @@ There are four gains from our methodology: (i) provides a more precise estimate 
 
 \section{Summary} \label{section:conclusion}
 
-We study two closely related early childhood education programs with randomized controlled design and provide a template to evaluate social programs solving a number of methodological and practical issues. These include non-compliance, attrition, multiple hypotheses testing, and the prediction of long-term outcomes. We provide a comprehensive evaluation by considering and summarizing the treatment effects for a multiplicity of outcomes. This have direct relationship with policy-relevant questions.
+We study two closely related early childhood education programs with randomized controlled design and provide a template to evaluate social programs solving a number of methodological and practical issues. These include non-compliance, attrition, multiple hypotheses testing, and the prediction of long-term outcomes. We provide a comprehensive evaluation by considering and summarizing the treatment effects for a multiplicity of outcomes. These have direct relationships with policy-relevant questions.
 
 As a program providing high-quality center-based childcare, ABC/CARE has positive effects on a variety of outcomes measuring human development throughout childhood to adulthood---including cognition, socio-emotional skills, criminal activity, and adulthood health. This translates into statistically and economically significant measures of social efficiency, like the benefit-cost ratio and the internal rate of return, which we calculate accounting for complications that arise when evaluating social programs and considering life-cycle gains.
 
-When adequately assessed, early childhood education programs enhance human development in that they provide a vehicle to promote social mobility. An adequate evaluation requires: (i) comparing the program with respect to a well-defined counterfactual---e.g. other programs or staying at home; and (ii) monetizing the life-cycle gains, which goes beyond back-of-the-envelope calculations based on short-term gains.
+When adequately assessed, findings indicate that early childhood education programs enhance human development in that they provide a vehicle to promote social mobility.
 
 %References
 \singlespace
