two decimals insanity

--- a/output/cnlsy_predict.tex
+++ b/output/cnlsy_predict.tex
@@ -1,24 +1,27 @@
-\begin{tabular}{lcccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) \\ 
-Group Matched & Control & Treatment & Control & Treatment & Control & Treatment \\ \mdirule
-Male & 7,562.770*** & 7,391.996*** & 7,267.662*** & 7,243.327*** & 3,371.816*** & 3,482.692*** \\
- & (931.432) & (969.098) & (982.419) & (1,021.915) & (1,219.539) & (1,293.471) \\
-Black & -8,062.700*** & -8,145.951*** & -4,206.202*** & -4,187.239*** & -2,232.158* & -2,305.822* \\
- & (923.830) & (961.930) & (994.330) & (1,035.753) & (1,170.938) & (1,217.551) \\
- Mother's Education & 1,905.898*** & 1,845.036*** & 326.706 & 317.739 & 312.391 & 271.119 \\
- & (256.525) & (269.214) & (287.927) & (302.341) & (350.992) & (382.074) \\
-PIAT (5-7) &  &  & 158.981*** & 160.564*** & 164.955** & 164.858** \\
- &  &  & (47.848) & (49.578) & (64.085) & (66.831) \\
-Education (30) &  &  & 3,737.285*** & 3,795.924*** & 2,259.366*** & 2,390.191*** \\
- &  &  & (245.901) & (259.968) & (419.113) & (446.233) \\
-Labor Income (21) &  &  & 0.501*** & 0.491*** &  &  \\
- &  &  & (0.055) & (0.059) &  &  \\
-Labor Income (28) &  &  &  &  & 0.480*** & 0.458*** \\
- &  &  &  &  & (0.071) & (0.073) \\
- BMI (34) &  &  & -42.222 & -45.051 & -167.491* & -177.528* \\
- &  &  & (69.602) & (71.813) & (90.534) & (95.291) \\
-Constant & 4,569.515 & 5,453.822* & -47,539.695*** & -48,343.759*** & -30,703.149*** & -31,243.473*** \\
- & (2,925.144) & (3,071.038) & (5,260.055) & (5,491.195) & (6,852.624) & (7,129.126) \\ \\ \midrule
- Observations & 1,880 & 1,876 & 1,463 & 1,459 & 734 & 733 \\
-$R^2$ & 0.095 & 0.093 & 0.297 & 0.295 & 0.499 & 0.488 \\ \bottomrule
+\begin{tabular}{lcccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) \\
+ & cnlsyZc & cnlsyZt & cnlsyZXc & cnlsyZXt & cnlsyZLc & cnlsyZLt \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  &  &  &  \\
+male & 7,919.35*** & 7,755.32*** & 7,483.55*** & 7,472.02*** & 3,634.65*** & 3,740.61*** \\
+ & (937.46) & (974.57) & (990.66) & (1,030.20) & (1,231.12) & (1,306.46) \\
+black & -7,480.51*** & -7,721.48*** & -3,669.31*** & -3,799.02*** & -1,853.59 & -2,022.28* \\
+ & (925.86) & (961.86) & (989.18) & (1,029.09) & (1,156.85) & (1,202.94) \\
+m\_ed0y & 1,888.32*** & 1,833.29*** & 303.02 & 288.90 & 284.94 & 235.17 \\
+ & (258.71) & (271.05) & (293.84) & (309.08) & (357.69) & (393.81) \\
+piatmath &  &  & 168.64*** & 170.88*** & 169.51*** & 169.89** \\
+ &  &  & (48.44) & (50.18) & (63.42) & (66.41) \\
+years\_30y &  &  & 3,678.09*** & 3,736.28*** & 2,223.04*** & 2,353.75*** \\
+ &  &  & (250.08) & (264.84) & (434.21) & (457.65) \\
+si21y\_inc\_labor &  &  & 0.51*** & 0.50*** &  &  \\
+ &  &  & (0.06) & (0.06) &  &  \\
+si34y\_bmi &  &  & -45.78 & -48.11 & -174.13* & -183.16* \\
+ &  &  & (70.83) & (72.79) & (96.27) & (100.26) \\
+inc\_labor28 &  &  &  &  & 0.48*** & 0.46*** \\
+ &  &  &  &  & (0.07) & (0.07) \\
+Constant & 4,170.58 & 5,151.64* & -47,898.77*** & -48,608.54*** & -30,593.81*** & -31,042.44*** \\
+ & (2,940.08) & (3,083.88) & (5,285.02) & (5,504.80) & (6,818.91) & (7,102.58) \\
+ &  &  &  &  &  &  \\
+Observations & 1,880 & 1,877 & 1,463 & 1,460 & 734 & 733 \\
+ R-squared & 0.09 & 0.09 & 0.29 & 0.29 & 0.50 & 0.49 \\ \hline
 \end{tabular}
