--- a/output/psid_predict.tex
+++ b/output/psid_predict.tex
@@ -1,18 +1,21 @@
-\begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
-Group Matched & Control & Treatment & Control & Treatment & Control & Treatment & Control & Treatment \midrule
-Male & 17,147.731*** & 17,424.243*** & 17,884.882*** & 18,184.743*** & 15,457.600*** & 15,783.008*** & 6,928.722*** & 7,148.259*** \\
- & (427.203) & (435.550) & (399.610) & (407.460) & (767.760) & (785.616) & (423.131) & (427.620) \\
-Black & -10,192.551*** & -10,714.937*** & -6,414.901*** & -6,362.179*** & -5,235.248*** & -5,251.909*** & -1,911.585*** & -1,885.167*** \\
- & (417.015) & (425.366) & (384.574) & (390.097) & (643.720) & (659.439) & (334.607) & (337.957) \\
-Education (30) &  &  & 4,572.052*** & 4,646.818*** & 5,014.011*** & 5,168.051*** & 1,811.012*** & 1,847.614*** \\
- &  &  & (104.370) & (108.974) & (198.940) & (207.323) & (106.276) & (109.084) \\
-Labor Income (21) &  &  &  &  & 0.374*** & 0.369*** &  &  \\
- &  &  &  &  & (0.028) & (0.028) &  &  \\
-Labor Income (28) &  &  &  &  &  &  & 0.728*** & 0.730*** \\
- &  &  &  &  &  &  & (0.015) & (0.016) \\
-Constant & 25,646.674*** & 26,554.653*** & -35,233.398*** & -36,381.964*** & -44,414.516*** & -46,444.070*** & -15,732.127*** & -16,389.372*** \\
- & (322.182) & (330.537) & (1,339.960) & (1,410.863) & (2,456.996) & (2,575.524) & (1,265.566) & (1,309.537) \\ \\ \midrule
-Observations & 13,908 & 13,901 & 13,908 & 13,901 & 4,112 & 4,112 & 9,812 & 9,810 \\
-$R^2$ & 0.154 & 0.156 & 0.270 & 0.271 & 0.334 & 0.337 & 0.633 & 0.633 \\ \toprule
+\begin{tabular}{lcccccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\
+ & psidZc & psidZt & psidZXc & psidZXt & psidZLc & psidZLt & psidZL1c & psidZL1t \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  &  &  &  &  &  \\
+male & 18,454.27*** & 18,778.26*** & 19,042.95*** & 19,352.93*** & 16,709.85*** & 17,050.37*** & 7,337.82*** & 7,542.64*** \\
+ & (427.36) & (435.06) & (399.60) & (406.78) & (789.96) & (805.84) & (429.15) & (433.28) \\
+black & -9,631.42*** & -9,932.01*** & -6,427.19*** & -6,354.78*** & -5,140.16*** & -5,136.31*** & -1,867.97*** & -1,842.35*** \\
+ & (408.98) & (415.50) & (374.89) & (378.51) & (624.73) & (635.55) & (321.99) & (323.76) \\
+years\_30y &  &  & 4,449.91*** & 4,533.83*** & 4,932.43*** & 5,067.93*** & 1,754.94*** & 1,788.77*** \\
+ &  &  & (101.10) & (105.39) & (197.95) & (205.30) & (103.83) & (106.50) \\
+inc\_labor21 &  &  &  &  & 0.36*** & 0.36*** &  &  \\
+ &  &  &  &  & (0.03) & (0.03) &  &  \\
+inc\_labor28 &  &  &  &  &  &  & 0.73*** & 0.73*** \\
+ &  &  &  &  &  &  & (0.02) & (0.02) \\
+Constant & 24,533.76*** & 25,183.34*** & -34,203.37*** & -35,481.26*** & -43,872.46*** & -45,702.32*** & -15,334.77*** & -15,938.77*** \\
+ & (308.15) & (314.11) & (1,286.18) & (1,349.67) & (2,422.30) & (2,522.50) & (1,225.58) & (1,265.80) \\
+ &  &  &  &  &  &  &  &  \\
+Observations & 13,908 & 13,908 & 13,908 & 13,908 & 4,112 & 4,112 & 9,812 & 9,812 \\
+ R-squared & 0.16 & 0.16 & 0.27 & 0.27 & 0.34 & 0.34 & 0.64 & 0.64 \\ \hline
 \end{tabular}
